--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>🎵 Beat Maker App</title>
   </head>
   <body>
+    <main>
     <div class="sequencer">
       <div class="kick-track">
         <div class="controls">
@@ -84,15 +85,16 @@
           <div class="pad hihat-pad b7"></div>
         </div>
       </div>
+      
+      <button class="play">Play</button>
     </div>
 
-    <button class="play">Play</button>
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
     <audio class="snare-sound" src="./sounds/snare-acoustic01.wav"></audio>
     <audio class="hihat-sound" src="./sounds/hihat-acoustic01.wav"></audio>
 
 
-
+  </main>
 
 
 
