8.write updateBtn func

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
       
-      <button class="play">Play</button>
+      <button class="play"><i class='fas fa-play'></i></button>
     </div>
 
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
