--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
       </div>
       
       <button class="play"><i class='fas fa-play'></i></button>
+
+      <div class="tempo">
+        <input type="range" class="tempo-slider" max="300" min="20" value="150" />
+        <p>Tempo: <span class="tempo-nr">150</span></p>
+      </div
     </div>
 
     <audio class="kick-sound" src="./sounds/kick-classic.wav"></audio>
